--- a/EventfulWebApi/Web.config
+++ b/EventfulWebApi/Web.config
@@ -10,7 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EventfulApiUrl" value="http://api.eventful.com/" />
-    <add key="GoogleGeoApiUrl" value="https://maps.googleapis.com/maps/api/geocode/json" />
+    <add key="GoogleGeoApiUrl" value="https://maps.googleapis.com/maps/api/" />
     <add key="EventfulCatApiUrl" value="http://api.eventful.com/json/categories/list" />
 
     <add key="NumberofThreads" value="8" />
