--- a/EventfulWebApi/EventfulWebApi.csproj
+++ b/EventfulWebApi/EventfulWebApi.csproj
@@ -443,6 +443,7 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\image\no_thumb.jpg" />
     <Content Include="Content\kendo\Flat\editor.png" />
     <Content Include="Content\kendo\Flat\imagebrowser.png" />
     <Content Include="Content\kendo\Flat\indeterminate.gif" />
